refactor formula, fixed minor issues.